--- a/AzureFunctionWeb/appsettings.json
+++ b/AzureFunctionWeb/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultConnection": "Server=localhost;Database=AzureFunctions;Trusted_Connection=True;TrustServerCertificate=true"
 }
