Add sales request data to sql table once it is added to the Azure queue

--- a/AzureFunctionWeb/appsettings.json
+++ b/AzureFunctionWeb/appsettings.json
@@ -5,6 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "DefaultConnection": "Server=localhost;Database=AzureFunctions;Trusted_Connection=True;TrustServerCertificate=true"
+  "AllowedHosts": "*" 
 }
